--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <name>FirePickaxeEnchantment</name>
 
-    <description>Adds custom enchantment for pickaxe which allows you to dig resources from ore blocks which require
-        smelting in furnace.
+    <description>Adds custom enchantment for a pickaxe which allows you to dig resources from ore blocks which require
+        smelting in the furnace.
     </description>
     <properties>
         <java.version>1.8</java.version>
